crates/cosmon-cli/tests/snapshots/help__sessions_inbox.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Read the messages addressed to this session (`--peek` to look without consuming them)

Usage: cs sessions inbox [OPTIONS]

Options:
      --config <PATH>       Path to the state directory (default: the galaxy's .cosmon/state/)
      --session <SID>       Mailbox to read. Defaults to `$COSMON_SESSION_ID`
      --peek                Show pending envelopes without acknowledging them
  -v, --verbose             Enable verbose output
      --all                 Include already-acknowledged envelopes
      --json                Output in JSON format
      --follow              Keep reading, printing each envelope as it arrives, until interrupted
      --interval <SECONDS>  Seconds between polls under `--follow` [default: 2]
  -h, --help                Print help
