crates/cosmon-cli/tests/snapshots/help__sessions_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Which of them have taken a seat, and in which role

Usage: cs sessions list [OPTIONS]

Options:
      --config <PATH>    Path to the state directory (default: the galaxy's .cosmon/state/)
      --galaxy <GALAXY>  Filter to one galaxy
      --role <ROLE>      Show only pilots in this seat (`primary` or `copilot`)
  -v, --verbose          Enable verbose output
      --follows <SID>    Show only pilots co-piloting this session
      --json             Output in JSON format
      --all              Include snapshots whose heartbeat has gone stale
  -h, --help             Print help
