crates/cosmon-cli/tests/snapshots/help__sessions_peers.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Who is seated around this session, and which way each one faces

Usage: cs sessions peers [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
      --session <SID>  The session whose neighbourhood to show. Defaults to `$COSMON_SESSION_ID`
      --all            Include snapshots whose heartbeat has gone stale
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
