crates/cosmon-cli/tests/snapshots/help__sessions_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Look inside one conversation — its last events, read-only

Usage: cs sessions show [OPTIONS] <SELECTOR>

Arguments:
  <SELECTOR>  The canonical selector, `<provider>:<native-session-id>`

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
      --tail <N>       Print the last N normalised events (kinds and sizes — never content) [default: 0]
      --no-read        Skip reading the log; show only what discovery already knows
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
