crates/cosmon-cli/tests/snapshots/help__sessions_takeover.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
The controls: who may change the mission, who asked for them, and the signature that hands them over

Usage: cs sessions takeover [OPTIONS] <COMMAND>

Commands:
  show       Who holds the controls, at which epoch, and what has been asked
  request    Ask for the controls. Writes a request and confers nothing
  grant      Hand the controls over — your signature, which no agent can produce
  challenge  Print the exact bytes an operator signs to authorise one transfer
  trust      Show which operator key this galaxy trusts to authorise a transfer
  check      Ask whether a session may pilot: the ledger's verdict, plus whether its seat would actually present that epoch. Exits 0 or 1

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
