crates/cosmon-cli/tests/snapshots/help__sessions_takeover_grant.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Hand the controls over — your signature, which no agent can produce

Usage: cs sessions takeover grant [OPTIONS] --mission <MOLECULE_ID>

Options:
      --config <PATH>          Path to the state directory (default: the galaxy's .cosmon/state/)
      --mission <MOLECULE_ID>  Mission whose controls are being handed over
      --request <REQUEST_ID>   Request being answered. The holder is taken from the request
  -v, --verbose                Enable verbose output
      --json                   Output in JSON format
      --to <SID>               Session to seat, when granting without a request
      --ttl <SECONDS>          Seconds after which the lease authorises nothing
      --by <NAME>              Operator identity to record. Defaults to `$USER`. Covered by the attestation, so it is a signed claim and not a free string
      --attestation <PATH>     The operator's detached minisign signature over the challenge, or `-` for stdin. Required: `--by` is a label, the signature is the gesture
      --sign-with <PATH>       The operator's minisign **secret** key. Folds challenge, signature and grant into this one command: the transfer is printed for you to read, `minisign(1)` asks for your passphrase, and no `.minisig` is left behind. cosmon still owns no signer — it relays to yours
  -h, --help                   Print help
