crates/cosmon-cli/tests/snapshots/help__sessions_takeover_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Who holds the controls, at which epoch, and what has been asked

Usage: cs sessions takeover show [OPTIONS] --mission <MOLECULE_ID>

Options:
      --config <PATH>          Path to the state directory (default: the galaxy's .cosmon/state/)
      --mission <MOLECULE_ID>  Mission whose lease to inspect
      --history                Print every grant ever recorded instead of only the head
  -v, --verbose                Enable verbose output
      --json                   Output in JSON format
  -h, --help                   Print help
