crates/cosmon-cli/tests/snapshots/help__sessions_takeover_trust.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Show which operator key this galaxy trusts to authorise a transfer

Usage: cs sessions takeover trust [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
